[add] deviseメール認証実装

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -19,5 +19,9 @@ html
   body
     header
       = render "layouts/header"
+    .notice
+      =notice
+    .alert
+      = alert
     main
       = yield
