--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -24,5 +24,16 @@
             | プロフィール
           = f.text_area :introduction, id:"user_introduction_input", class:"form-control"
 
+        .form-check.form-check-inline
+          - if @user.is_mail_send
+            = f.check_box :is_mail_send, checked_value: true, unchecked_value: false, checked: true, class:"form-check-input"
+          - else
+            = f.check_box :is_mail_send, checked_value: true, unchecked_value: false, class:"form-check-input"
+          = f.label :is_mail_send, "発売前日にメールを受け取る", class:"form-check-label"
+
+        .form
+          small
+            | ※読みたいリストに入れた本が発売前日に通知されます。
+
         .form-group
           = f.submit "変更を保存する", class:"btn btn-success"
