--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,7 +26,7 @@
 
 body{
  font-family: 'Kosugi', sans-serif;
- background-color:  #FAFAFA;
+ background-color:  #f5f5f5;
 }
 
 header{
@@ -92,7 +92,7 @@ header{
 
 //book-showページ
 .show{
-  color:#5B5B5B;
+  // color:#5B5B5B;
 }
 
 .show_read_icon{
