--- a/app/views/book_reads/show.html.slim
+++ b/app/views/book_reads/show.html.slim
@@ -23,20 +23,10 @@
 
   .row
     .col-md-７
-      = form_with model: ReadComment, url: book_book_read_read_comments_path(@book, @book_read), method: :post, local: true, class:"form-inline" do |f|
+      = form_with model: ReadComment, url: book_book_read_read_comments_path(@book, @book_read), method: :post, remote: true, id:"book_read_comment_form", class:"form-inline" do |f|
         = f.text_field :comment, class:"form-control"
         = f.submit "コメントする", class:"btn btn-primary"
   .row
-    .col-md-12
-      - @book_read.read_comments.each do |comment|
-        .border.p-2.mt-2
-          .col-md-1
-            = link_to user_path(comment.user.id)
-             = attachment_image_tag comment.user, :image, size: "80x80", fallback: "noimage.jpg", class: "rounded-circle mr-4"
-
-          .col-md-9
-            p
-              = link_to user_path(comment.user_id)
-                = comment.user.name
-            p
-              = comment.comment
+    .col-md-12.
+      div id="book_read_comments"
+        = render "book_read_comments", book: @book, book_read: @book_read
