--- a/app/views/books/_read.html.slim
+++ b/app/views/books/_read.html.slim
@@ -2,13 +2,13 @@
   a.book_show_readon.p-2 type= "button" data-toggle= "modal" data-target= "#read_modal"
     i.fas.fa-bookmark.show_read_icon
     span.show_read_text.ml-3
-      | 読んだ！
+      | 読んだ#{book.book_reads.count}
 
 -else
   a.book_show_readoff.p-2 type= "button" data-toggle= "modal" data-target= "#read_modal"
     i.fas.fa-bookmark.show_read_icon.d-inline
     p.show_read_text.ml-3.d-inline
-      | 読んだ！
+      | 読んだ#{book.book_reads.count}
 
 .modal.fade#read_modal tabindex= "-1" role= "dialog" aria-labelledby= "read_modal_label" aria-hidden= "true"
   .modal-dialog.modal-dialog-scrollable role= "document"
@@ -21,13 +21,13 @@
             | &times;
       .modal-body
         - if book_read.present?
-          = form_with model: BookRead, url: book_book_read_path(book, book_read), method: :patch, local: true do |f|
+          = form_with model: BookRead, url: book_book_read_path(book, book_read), method: :patch, remote: true do |f|
             .form-group
               = f.text_area :comment, class: "form-control", placeholder: "レビュー無記入でも投稿できます。", rows: 5, value: book_read.comment
             .form-group#star-edit
               = f.hidden_field :rate, class: "form-control", id: :review_star
             .modal-footer
-              = link_to "削除する", book_book_read_path(book, book_read),  method: :delete, local: true,  class: "btn btn-secondary"
+              = link_to "削除する", book_book_read_path(book, book_read),  method: :delete, remote: true,  class: "btn btn-secondary"
               = f.submit "編集する", class: "btn btn-primary"
           javascript:
             $('#star-edit').raty({
@@ -41,7 +41,7 @@
             });
 
         - else
-          = form_with model: book_read_new, url: book_book_reads_path(book), method: :post, local: true do |f|
+          = form_with model: book_read_new, url: book_book_reads_path(book), method: :post, remote: true do |f|
             .form-group
               = f.text_area :comment, class: "form-control", placeholder: "レビュー無記入でも投稿できます。", rows: 5
             .form-group#star
