--- a/app/views/books/_review.html.slim
+++ b/app/views/books/_review.html.slim
@@ -1,7 +1,7 @@
 p.mt-5
   | #{@reviews.count}件のレビュー
 - reviews.each do |review|
-  .border.p-2.mt-2
+  .border
     .row
       .col-md-1
         = link_to user_path(review.user.id)
@@ -34,23 +34,17 @@ p.mt-5
 
       .col-md-6.ml-3
         - if user_signed_in?
-          - if review.favorited_by?(current_user)
-            span
-              = link_to book_book_read_read_favorites_path(review.book, review), method: :delete do
-                i.fas.fa-heart いいね済
-          - else
-            span
-              = link_to book_book_read_read_favorites_path(review.book, review), method: :post do
-                i.fas.fa-heart いいね
+          span id="favorite_btn_#{review.id}"
+            = render "read_favorites/favorite_btn", review: review
 
           span.ml-3
             = link_to book_book_read_path(review.book, review, user: review.user_id)
-              i.fas.fa-comments コメントする
+              i.fas.fa-comments #{review.read_comments.count}コメントする
         - else
             span
               = link_to new_user_session_path
-                i.fas.fa-heart いいね
+                i.fas.fa-heart #{review.read_favorites.count}いいね
 
             span.ml-3
               = link_to new_user_session_path
-                i.fas.fa-comments コメントする
+                i.fas.fa-comments #{review.read_read_comments.count}コメントする
