--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -1,42 +1,58 @@
-.container-fruid.header
-  .col-12
-    nav.navbar
-      = link_to root_path
-        = image_tag asset_path("bookmarks.png"), :width => '15%', :height => '15%', class:"navbar-brand ml-2"
+nav.navbar.navbar-expand-lg.border-bottom.shadow-sm
+  .container-fluid.header
+    = link_to root_path, class:"navbar-brand"
+      = image_tag asset_path("bookmarks.png"),  :height => '65'
+    button.navbar-toggler type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
+      span.navbar-toggler-icon
 
-      ul.nav.navbar.justify-content-center
+
+    = form_with url: books_path, method: :get, local: true, class:"d-flex mr-auto" do |f|
+      = f.text_field :keyword, required: true, class:"form-control me-2"
+      = f.submit "検索", class:"btn btn-secondary"
+
+    ul.nav.nav-pills
+      - if user_signed_in?
         li.nav-item
-          = form_with url: books_path, method: :get, local: true, class:"form-inline" do |f|
-            = f.text_field :keyword, required: true, class:"form-control ml-5"
-            = f.submit "検索", class:"btn btn-secondary my-2"
+          = link_to "本を探す", books_path(keyword: "本", page: rand(1..100)), class:"nav-link header_find_book"
+        li.nav-item
+          = link_to notifications_path, class:"nav-link" do
+            i.fas.fa-bell
+        li.nav-item.dropdown.dropleft.mr-3
+          a.nav-link.dropdown-toggle data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"
+            i.fas.fa-user
+          .dropdown-menu
+            = link_to user_path(current_user.id), class:"dropdown-item" do
+              i.fas.fa-user.fa-fw
+              span  マイページ
+            = link_to book_ranking_path(genre: "", sort: "sales"), class:"dropdown-item pr-2" do
+              i.fas.fa-crown.fa-fw
+              span  ランキング
+            = link_to user_calender_path(current_user.id), class:"dropdown-item pr-2" do
+              i.far.fa-calendar-alt.fa-fw
+              span  発売カレンダー
+            = link_to root_path, class:"dropdown-item pr-2" do
+              i.fas.fa-book-reader.fa-fw
+              span  About
+            = link_to destroy_user_session_path, method: :delete, class:"dropdown-item pr-2" do
+              i.fas.fa-sign-out-alt.fa-fw
+              span  ログアウト
 
-
-      ul.nav.navbar.ml-auto
-        - if user_signed_in?
-          li.nav-item
-            = link_to "About", root_path, class:"nav-link text-secondary"
-          li.nav-item
-            = link_to "ランキング", book_ranking_path(genre: "", sort: "sales"), class:"nav-link text-secondary"
-          li.nav-item
-            = link_to "本を探す", books_path(keyword: "本", page: rand(1..100)), class:"nav-link header_find_book"
-          li.nav-item
-            = link_to "ログアウト", destroy_user_session_path, method: :delete, class:"nav-link"
-          li.nav-item
-            = link_to user_path(current_user.id), class:"nav-link" do
-              i.fas.fa-user
-          li.nav-item
-            = link_to user_calender_path(current_user.id), class:"nav-link" do
-              i.far.fa-calendar-alt
-
-        - else
-          li.nav-item
-            = link_to "About", root_path, class:"nav-link text-secondary"
-          li.nav-item
-            = link_to "ランキング", book_ranking_path(genre: "", sort: "sales"), class:"nav-link text-secondary"
-          li.nav-item
-            = link_to "ログイン", new_user_session_path, class:"nav-link text-secondary"
-          li.nav-item
-            = link_to "新規登録", new_user_registration_path, class:"nav-link text-secondary"
-          li.nav-item
-            = link_to "本を探す", books_path(keyword: "少年", page: rand(100)), class:"nav-link header_find_book"
-
+      - else
+        li.nav-item
+          = link_to "本を探す", books_path(keyword: "本", page: rand(1..100)), class:"nav-link header_find_book"
+        li.nav-item.dropdown.dropleft.mr-3
+          a.nav-link.dropdown-toggle data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"
+            i.fas.fa-user
+          .dropdown-menu
+            = link_to root_path, class:"dropdown-item text-secondary pr-2" do
+              i.fas.fa-book-reader.fa-fw
+              span  About
+            = link_to book_ranking_path(genre: "", sort: "sales"), class:"dropdown-item text-secondary pr-2" do
+              i.fas.fa-crown.fa-fw
+              span  ランキング
+            = link_to new_user_session_path, class:"dropdown-item pr-2 text-secondary text-secondary" do
+              i.fas.fa-user.fa-fw
+              span  ログイン
+            = link_to new_user_registration_path, class:"dropdown-item text-secondary pr-2 " do
+              i.fas.fa-sign-out-alt.fa-fw
+              span  新規登録
