[add] 通知機能実装

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -40,6 +40,13 @@ header{
   border-bottom: 5px solid #ccc100;
 }
 
+.n-circle {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  color: #efa04c;
+}
+
 // aboutページ
 .about_bg{
   background-image: image-url("bg-image.jpg");
