--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -15,8 +15,7 @@ nav.navbar.navbar-expand-lg.border-bottom.shadow-sm
         li.nav-item
           = link_to "本を探す", books_path(keyword: "本", page: rand(1..100)), class:"nav-link header_find_book"
         li.nav-item
-          = link_to notifications_path, class:"nav-link" do
-            i.fas.fa-bell
+          = render "notifications/uncheck"
         li.nav-item.dropdown.dropleft.mr-3
           a.nav-link.dropdown-toggle data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"
             i.fas.fa-user
