--- a/app/views/notifications/_notification.html.slim
+++ b/app/views/notifications/_notification.html.slim
@@ -24,18 +24,17 @@
       = "にいいねしました"
 
     - when "comment" then
-      - if notification.book_read.user_id == visited.id
-        span
-          = link_to user_path(visitor) do
-            = attachment_image_tag visitor, :image, size: "50x50", fallback: "noimage.jpg", class: "rounded-circle mr-4"
-            strong
-              = visitor.name
-          span さんが
-          = link_to "#{notification.book.title}の投稿", book_book_read_path(notification.book_read.book_id,notification.book_read.id, user: visited), style: "font-weight: bold;"
+      span
+        = link_to user_path(visitor) do
+          = attachment_image_tag visitor, :image, size: "50x50", fallback: "noimage.jpg", class: "rounded-circle mr-4"
+          strong
+            = visitor.name
+        span さんが
+        = link_to "#{notification.book.title}の投稿", book_book_read_path(notification.book_read.book_id,notification.book_read.id, user: notification.book_read.user_id), style: "font-weight: bold;"
 
-        span にコメントしました
-        p.text-muted.mb-0
-          = ReadComment.find_by(id: notification.read_comment_id)&.comment
+      span にコメントしました
+      p.text-muted.mb-0
+        = ReadComment.find_by(id: notification.read_comment_id)&.comment
 
     - when "release" then
       span
