[fix] about、ユーザーページ-デザイン修正

--- a/app/views/books/_sort.html.slim
+++ b/app/views/books/_sort.html.slim
@@ -1,4 +1,4 @@
-.drop-down.d-inline
+.drop-down.
   button.btn.btn-light.border.dropdown-toggle#dropdownMenu type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
     | ジャンル
   .dropdown-menu aria-labelledby="dropdownMenu"
