--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -101,7 +101,7 @@ header{
 }
 .about_h1_item{
   font-weight: 900;
-  font-size: 90px;
+  font-size: 80px;
 }
 
 .about_slide_box{
@@ -149,41 +149,23 @@ header{
 }
 
 // user-showページ
-.user_flex_box{
-  border-bottom: 1px solid #707070;
+.user_show_readcomment{
+  font-size:14px;
+
 }
 
-.user_follow_list{
-  border-bottom: 1px solid #707070;
+.user_show_btn{
+  width:120px;
+  height:70px;
+  opacity: 50%;
+  &:hover {
+    opacity: 100%;
+    background-color:#FFE100;
+  }
 }
-
-// .user-review-item{
-//   border-bottom: 1px solid #707070;
-// }
-
-//book-showページ
-.show{
-  // color:#5B5B5B;
-}
-
-.show_read_icon{
-  font-size: 40px;
-}
-
-.show_read_text{
-  font-size: 18px;
-}
-
-.show_unread_icon{
-  font-size: 40px;
-}
-
-.show_unread_text{
-  font-size: 18px;
-}
-
-.show_comment_text{
-  font-size: 18px;
+.read_btn_active{
+  opacity: 100%;
+  background-color:#FFE100;
 }
 
 .book_show_readon{
