--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -1,39 +1,46 @@
 .container
   .row
-    .col-md-6
-      h3.mt-5
-        | プロフィール編集
-  = form_with model: @user, local: true do |f|
-    .row
-      .col-md-3
-        .form-group
-          label
-            = attachment_image_tag @user, :image, size: "100x100", fallback: "noimage.jpg", class: "rounded-circle mt-3"
-            = f.attachment_field :image
-      .col-md-6.offset-1
-        h3
-          = @user.name_id
+    .col-md-12.bg-white.text-center.p-3
+      h3 プロフィール編集
+  .row
+    .col-md-12.text-center.mt-4
+      .bg-white.py-5
+        = form_with model: @user, local: true do |f|
+          .d-inline-flex
+            .d-block.mr-3
+              = attachment_image_tag @user, :image, :fill, 180, 180, fallback:"noimage.jpg", size: "180x180", class: "rounded-circle shadow-sm mr-4 mb-4"
+              br
+              small
+                = f.attachment_field :image
 
-        .form-group
-          label for="user_name_input"
-            | ニックネーム
-          = f.text_field :name, id:"user_name_input", class:"form-control"
+            .d-block
+              .form-group
+                .text-left
+                  label.mr-auto for="user_name_input" ニックネーム
+                  = f.text_field :name, id:"user_name_input", class:"form-control"
 
-        .form-group
-          label for="user_introduction_input"
-            | プロフィール
-          = f.text_area :introduction, id:"user_introduction_input", class:"form-control"
+              .form-group
+                .text-left
+                  label.mr-auto for="user_email_input" メールアドレス
+                  = f.text_field :email, id:"user_email_input", class:"form-control"
 
-        .form-check.form-check-inline
-          - if @user.is_mail_send
-            = f.check_box :is_mail_send, checked_value: true, unchecked_value: false, checked: true, class:"form-check-input"
-          - else
-            = f.check_box :is_mail_send, checked_value: true, unchecked_value: false, class:"form-check-input"
-          = f.label :is_mail_send, "発売前日にメールを受け取る", class:"form-check-label"
+              .form-group
+                .text-left
+                  label for="user_introduction_input"
+                    | プロフィール
+                  = f.text_area :introduction, rows:"5", id:"user_introduction_input", class:"form-control"
 
-        .form
-          small
-            | ※読みたいリストに入れた本が発売前日に通知されます。
+              .form-check.form-check-inline
+                - if @user.is_mail_send
+                  = f.check_box :is_mail_send, checked_value: true, unchecked_value: false, checked: true, class:"form-check-input"
+                - else
+                  = f.check_box :is_mail_send, checked_value: true, unchecked_value: false, class:"form-check-input"
+                = f.label :is_mail_send, "発売前日にメールを受け取る", class:"form-check-label"
 
-        .form-group
-          = f.submit "変更を保存する", class:"btn btn-success"
+              .form
+                small
+                  | ※読みたいリストに入れた本が発売前日に通知されます。
+
+              .form-group.mt-3
+                = f.submit "変更を保存する", class:"btn btn-success"
+                = link_to "戻る", :back, class:"btn btn-secondary ml-3"
