--- a/app/views/users/cancel.html.slim
+++ b/app/views/users/cancel.html.slim
@@ -1,11 +1,11 @@
 .col-sm-8.mx-auto.my-5
-  h3.text-center.py-3.my-4
+  h2.text-center.py-3.my-4.bg-danger.text-white
     | 本当に退会しますか？
-    .text-center
-      p
-       | 退会すると、会員登録情報や<br>
-        これまでの購入履歴が閲覧できなくなります。
-        退会する場合は、「退会する」をクリックしてください。
+  .text-center
+    h4.bg-light.py-3
+     | 退会すると、会員登録情報や <br>
+      これまでの購入履歴が閲覧できなくなります。<br>
+      退会する場合は、「退会する」をクリックしてください。
 
     .text-center
       = link_to "退会しない", user_path(current_user), class: "btn btn-primary col-sm-2 p-2 mt-3"
